--- a/19june24/index.html
+++ b/19june24/index.html
@@ -78,6 +78,20 @@
         <h2>Bounty:$13,00,00,000</h2>
         <h1>Frankey</h1>
       </div>
+      <div class="strawhats">
+        <p>WANTED</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-rrQ_f6mjuQjZ_xUvJkvdn8ExIqfgUAvGQQ&s">
+        <h3>Dead or alive</h3>
+        <h2>Bounty:$13,00,00,000</h2>
+        <h1>Frankey</h1>
+      </div>
+      <div class="strawhats">
+        <p>WANTED</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-rrQ_f6mjuQjZ_xUvJkvdn8ExIqfgUAvGQQ&s">
+        <h3>Dead or alive</h3>
+        <h2>Bounty:$13,00,00,000</h2>
+        <h1>Frankey</h1>
+      </div>
     </div>
 </body>
 </html>
