--- a/20june24/index.html
+++ b/20june24/index.html
@@ -53,11 +53,11 @@
                 <input type="number">
             </div>
             <div class="elements">
-                <label>DOB</label>
+                <label>DOB:</label>
                 <input type="date">
             </div>
             <div class="elements">
-                <label>slot</label>
+                <label>slot:</label>
                 <input type="time" >
             </div>
             <div class="elements">
