--- a/respo/index.html
+++ b/respo/index.html
@@ -122,27 +122,27 @@
         </section>
         <section>
             <div class="item1">
-                <div>
+                <div class="items">
                  <h1>image1</h1>
                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSuE5EMeIq6zKOOqdFgpRIsvZxQb4n68p_6g&s" alt=""> 
               </div>
-                <div>
+                <div class="items">
                   <h1>image2</h1>
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZ2cGWTEGimsmeC-i-jDKv-1Xwkgm4Lls57A&s" alt=""> 
                 </div>
-                <div>
+                <div class="items ">
                   <h1>image3</h1>
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSuE5EMeIq6zKOOqdFgpRIsvZxQb4n68p_6g&s" alt=""> 
                 </div>
-                <div>
+                <div class="items">
                   <h1>image4</h1>
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZ2cGWTEGimsmeC-i-jDKv-1Xwkgm4Lls57A&s" alt=""> 
                 </div>
-                <div>
+                <div class="items">
                   <h1>image5</h1>
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSuE5EMeIq6zKOOqdFgpRIsvZxQb4n68p_6g&s" alt=""> 
                 </div>
-                <div>
+                <div class="items">
                   <h1>image6</h1>
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZ2cGWTEGimsmeC-i-jDKv-1Xwkgm4Lls57A&s" alt=""> 
                 </div>
